@@ -112,13 +112,15 @@ static int taper_mem_port_source_predict_parts(TaperSource * pself) {
 }
 
 /* Allocate buffer space, if it hasn't been done yet. */
-static void setup_retry_buffer(TaperMemPortSource * self) {
+static gboolean
+setup_retry_buffer(TaperMemPortSource * self) {
+    TaperSource *pself = TAPER_SOURCE(self);
     guint64 alloc_size;
     guint64 max_usage;
     if (selfp->retry_buffer != NULL)
-        return;
+        return TRUE;
 
-    alloc_size = TAPER_SOURCE(self)->max_part_size;
+    alloc_size = pself->max_part_size;
     if (alloc_size > SIZE_MAX) {
         g_fprintf(stderr, "Fallback split size of %lld is greater that system maximum of %lld.\n",
                 (long long)alloc_size, (long long)SIZE_MAX);
@@ -137,8 +139,16 @@ static void setup_retry_buffer(TaperMemPortSource * self) {
         alloc_size = DISK_BLOCK_BYTES * 10;
     }
     
-    TAPER_SOURCE(self)->max_part_size = alloc_size;
+    pself->max_part_size = alloc_size;
     selfp->retry_buffer = malloc(alloc_size);
+
+    if (selfp->retry_buffer == NULL) {
+	pself->errmsg = g_strdup_printf(_("Can't allocate %ju bytes of memory for split buffer"),
+					(uintmax_t)pself->max_part_size);
+	return FALSE;
+    }
+
+    return TRUE;
 }
 
 static ssize_t 
@@ -165,7 +175,8 @@ taper_mem_port_source_read (TaperSource * pself, void * buf, size_t count) {
     } else {
         int read_result;
         if (selfp->retry_buffer == NULL) {
-            setup_retry_buffer(self);
+            if (!setup_retry_buffer(self))
+		return -1;
         }
 
         count = MIN(count, pself->max_part_size - selfp->buffer_len);
