@@ -1,3 +1,8 @@
+2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>,
+	* server-src/driverio.c: Set *result_argv to NULL on EOF.
+	* server-src/taper-mem-port-source.c: Set an error if the memory can't
+	  be allocated for the memory buffer.
+
 2009-01-05  Dustin J. Mitchell <dustin@zmanda.com>
 	* client-src/runtar.c: remove unnecessary check for existence of
 	  CLIENT_LOGIN
